--- a/database-migration/pom.xml
+++ b/database-migration/pom.xml
@@ -51,6 +51,18 @@
             <artifactId>fongo</artifactId>
             <version>2.1.0</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.11.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
