--- a/vcf-dumper/vcf-dumper-lib/pom.xml
+++ b/vcf-dumper/vcf-dumper-lib/pom.xml
@@ -34,6 +34,18 @@
             <artifactId>fongo</artifactId>
             <scope>test</scope>
             <version>2.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.11.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.samtools</groupId>
@@ -44,6 +56,12 @@
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>3.10.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
