--- a/vcf-dumper/vcf-dumper-ws/pom.xml
+++ b/vcf-dumper/vcf-dumper-ws/pom.xml
@@ -17,6 +17,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.11.3</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
